# facturasTauri

./: bun.lockb  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: main.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: excel_generator.rs  factura.rs  main.rs  rfc_clientes.rs  xml_processor.rs
src-tauri/src/types/: complementos.rs  factura.rs  mod.rs
src-tauri/src/utils/: mod.rs
src-tauri/src/utils/excel/: excel_generator.rs  mod.rs
src-tauri/src/utils/file/: file_operations.rs  mod.rs
src-tauri/src/utils/processors/: comprobante.rs  conceptos.rs  emisor.rs  mod.rs  receptor.rs  timbre_fiscal.rs
src-tauri/src/utils/xml/: mod.rs  xml_processor.rs  xml_reader.rs
src/components/: ExcelDisplay.tsx  FileProcessor.tsx  Layout.tsx  UploadBtn.tsx  VersionDisplay.tsx
src/components/common/: NavBar.tsx
src/components/xmlExtractor/: FileCard.tsx
src/hooks/: useDocDir.tsx  useFileProcessing.tsx  useOpenExcelFile.tsx
src/pages/: Home.tsx  Settings.tsx  XmlReader.tsx
