[package]
name = "facturastauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all",
  "fs-read-file",
  "fs-read-dir",
  "path-all",
  "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.36"
xlsxwriter = "0.6"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
